      - Linux: reset the X server error handler on exit to prevent issues with Tk/Tkinter (fixes #220)
      - Linux: added mouse support (related to #55)
      - Linux: refactored how internal handles are stored to fix issues with multiple X servers (fixes #210)
      - Linux: removed side effects when leaving the context manager, resources are all freed (fixes #210)
      - tests: added PyPy 3.9, removed tox, and improved GNU/Linux coverage

7.0.1   2022/10/27
      - fixed the wheel package
      - removed support for Python 3.6
      - MSS: fixed PEP 484 prohibits implicit Optional

7.0.0   2022/10/27
      - added support for Python 3.11
      - added support for Python 3.10
      - removed support for Python 3.5
      - MSS: modernized the code base (types, f-string, ran isort & black) (close #101)
      - MSS: fixed several Sourcery issues
      - MSS: fixed typos here, and there
      - doc: fixed an error when building the documentation

6.1.0   2020/10/31
      - MSS: reworked how C functions are initialised
      - Mac: reduce the number of function calls
      - Mac: support macOS Big Sur (fixes #178)
      - tests: expand Python versions to 3.9 and 3.10
      - tests: fix macOS intepreter not found on Travis-CI
      - tests: fix test_entry_point() when there are several monitors

6.0.0   2020/06/30
      - removed usage of deprecated "license_file" option for "license_files"
      - fixed flake8 usage in pre-commit
      - the module is now available on conda (closes #170)
      - MSS: the implementation is now thread-safe on all OSes (fixes #169)
      - Linux: better handling of the Xrandr extension (fixes #168)
      - tests: fixed a random bug on test_grab_with_tuple_percents() (fixes #142)

5.1.0   2020/04/30
      - produce wheels for Python 3 only
      - MSS: renamed again MSSMixin to MSSBase, now derived from abc.ABCMeta
      - tools: force write of file when saving a PNG file
      - tests: fix tests on macOS with Retina display