@@ -10,6 +10,7 @@ History:
       - Linux: added mouse support (related to #55)
       - Linux: refactored how internal handles are stored to fix issues with multiple X servers (fixes #210)
       - Linux: removed side effects when leaving the context manager, resources are all freed (fixes #210)
+      - CLI: added --with-cursor argument
       - tests: added PyPy 3.9, removed tox, and improved GNU/Linux coverage
 
 7.0.1   2022/10/27
